--- a/Lib/Neon.Kube/Resources/Helm/istio/templates/istio.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/istio/templates/istio.yaml
@@ -23,6 +23,7 @@ spec:
               - path: kind
                 value: DaemonSet
               - path: spec.strategy
+        hpaSpec: {}
         service:
           {{- with .Values.nodePorts }}
             ports:
