--- a/Lib/Neon.Kube/Resources/Helm/harbor/templates/persistentvolumes.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/harbor/templates/persistentvolumes.yaml
@@ -8,7 +8,7 @@ spec:
   - ReadWriteOnce
   resources:
     requests:
-      storage: 5Gi
+      storage: {{ .Values.storage.trivy.cache.size }}
   volumeMode: Filesystem
 ---
 apiVersion: v1
@@ -21,5 +21,5 @@ spec:
   - ReadWriteOnce
   resources:
     requests:
-      storage: 5Gi
+      storage: {{ .Values.storage.trivy.reports.size }}
   volumeMode: Filesystem
