--- a/Lib/Neon.Kube.Hosting/Neon.Kube.Hosting.csproj
+++ b/Lib/Neon.Kube.Hosting/Neon.Kube.Hosting.csproj
@@ -8,7 +8,7 @@
     <Authors>neonFORGE Team</Authors>
     <Company>neonFORGE LLC</Company>
     <Product>neonKUBE</Product>
-    <Description>[Internal use only]: neonKUBE hosting manager common classes.</Description>
+    <Description>INTERNAL USE ONLY: neonKUBE hosting manager common classes.</Description>
     <Copyright>Copyright © 2005-2021 by neonFORGE LLC.  All rights reserved.</Copyright>
     <PackageReleaseNotes>https://github.com/nforgeio/neonKUBE/releases</PackageReleaseNotes>
     <RootNamespace>Neon.Kube</RootNamespace>
