--- a/Lib/Neon.Kube.HyperV/Neon.Kube.HyperV.csproj
+++ b/Lib/Neon.Kube.HyperV/Neon.Kube.HyperV.csproj
@@ -7,7 +7,7 @@
     <Version>2.10.0-internal</Version>
     <Authors>neonFORGE Team</Authors>
     <Company>neonFORGE LLC</Company>
-    <Description>[Internal use only]: neonKUBE hosting manager for Windows Hyper-V on remote servers (e.g. production)</Description>
+    <Description>INTERNAL USE ONLY: neonKUBE hosting manager for Windows Hyper-V on remote servers (e.g. production)</Description>
     <Copyright>Copyright © 2005-2021 by neonFORGE LLC.  All rights reserved.</Copyright>
     <PackageReleaseNotes>https://github.com/nforgeio/neonKUBE/releases</PackageReleaseNotes>
     <Product>neonKUBE</Product>
