--- a/Lib/Neon.HyperV/Neon.HyperV.csproj
+++ b/Lib/Neon.HyperV/Neon.HyperV.csproj
@@ -8,7 +8,7 @@
     <Authors>neonFORGE Team</Authors>
     <Company>neonFORGE LLC</Company>
     <Product>neonLIBRARY</Product>
-    <Description>**INTERNAL USE ONLY:** Windows Hyper-V extensions</Description>
+    <Description>INTERNAL USE ONLY: Windows Hyper-V extensions</Description>
     <Copyright>Copyright © 2005-2021 by neonFORGE LLC.  All rights reserved.</Copyright>
     <PackageReleaseNotes>https://github.com/nforgeio/neonKUBE/releases</PackageReleaseNotes>
     <AssemblyVersion>0.0.0.0</AssemblyVersion>
