--- a/Lib/Neon.Kube.XenServer/Neon.Kube.XenServer.csproj
+++ b/Lib/Neon.Kube.XenServer/Neon.Kube.XenServer.csproj
@@ -8,7 +8,7 @@
     <Authors>neonFORGE Team</Authors>
     <Company>neonFORGE LLC</Company>
     <Product>neonKUBE</Product>
-    <Description>[Internal use only]: neonKUBE hosting manager for XenServer/XCP-ng envirojnhments.</Description>
+    <Description>INTERNAL USE ONLY: neonKUBE hosting manager for XenServer/XCP-ng envirojnhments.</Description>
     <AssemblyVersion>0.0.0.0</AssemblyVersion>
     <FileVersion>6.0.0.0</FileVersion>
     <PackageReleaseNotes>https://github.com/nforgeio/neonKUBE/releases</PackageReleaseNotes>
