added some limits to hyperv and turned off cstor for all neon-desktop

--- a/Lib/Neon.Kube/Resources/Helm/grafana/templates/grafana.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/grafana/templates/grafana.yaml
@@ -62,8 +62,6 @@ spec:
   resources:
     # Optionally specify container resources
     limits:
-      cpu: 2000m
-      memory: 8000Mi
+      memory: {{ .Values.resources.limits.memory }}
     requests:
-      cpu: 100m
-      memory: 200Mi
+      memory: {{ .Values.resources.requests.memory }}
