upgraded some grafana services

--- a/Lib/Neon.Kube/Resources/Helm/grafana-agent/templates/grafanaagent.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/grafana-agent/templates/grafanaagent.yaml
@@ -15,6 +15,10 @@ spec:
   serviceAccountName: grafana-agent
   nodeSelector:
   {{- toYaml .Values.nodeSelector | nindent 4 }}
+  logs:
+    logsExternalLabelName: {{ .Values.clusterName }}
+  metrics:
+    metricsExternalLabelName: {{ .Values.clusterName }}
   prometheus:
     shards: {{ .Values.shards }}
     instanceSelector:
