--- a/Lib/Neon.Kube/Resources/Helm/grafana-agent/values.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/grafana-agent/values.yaml
@@ -2,20 +2,22 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
+clusterName: neon-kube
+
 shards: 1
 
 agent:
   image:
     organization: neon-registry.node.local
     repository: grafana-agent
-    tag: v0.15.0
+    tag: v0.18.3
     pullPolicy: IfNotPresent
 
 operator:
   image:
     organization: neon-registry.node.local
     repository: grafana-agent-operator
-    tag: v0.16.1
+    tag: v0.18.3
     pullPolicy: IfNotPresent
 
 configReloader:
