grafana agent relabeling add cluster name

--- a/Lib/Neon.Kube/Resources/Helm/grafana-agent/templates/configmap.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/grafana-agent/templates/configmap.yaml
@@ -15,6 +15,8 @@ data:
         enabled: true
     prometheus:
       global:
+		    external_labels:
+		      cluster: {{ .Values.clusterName }}
         scrape_interval: 15s
       wal_directory: /var/lib/agent/data
       configs:
