--- a/Lib/Neon.Kube/Resources/Helm/grafana-agent/templates/deployment.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/grafana-agent/templates/deployment.yaml
@@ -24,3 +24,7 @@ spec:
       - name: operator
         image: "{{ .Values.operator.image.organization }}/{{ .Values.operator.image.repository }}:{{ .Values.operator.image.tag }}"
         imagePullPolicy: {{ .Values.operator.image.pullPolicy | default "IfNotPresent" }}
+        {{- if .Values.resources.agent }}
+        resources:
+        {{- toYaml .Values.resources.agent | nindent 10 }}
+        {{- end }}
