--- a/Lib/Neon.Kube/Resources/Helm/minio/templates/operator-deployment.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/minio/templates/operator-deployment.yaml
@@ -50,6 +50,15 @@ spec:
             - name: WATCHED_NAMESPACE
               value: {{ .Values.operator.nsToWatch }}
             {{- end }}
+          {{ else }}
+          {{- with .Values.operator.env }}
+          env:
+            {{ toYaml . | nindent 10 }}
+          {{- end }}
           {{- end }}
           resources:
             {{- toYaml .Values.operator.resources | nindent 12 }}
+    {{- with .Values.operator.initContainers }}
+      initContainers:
+        {{- toYaml . | nindent 8 }}
+    {{- end}}
