--- a/Services/neon-cluster-operator/neon-cluster-operator.csproj
+++ b/Services/neon-cluster-operator/neon-cluster-operator.csproj
@@ -22,11 +22,13 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="Resources\cluster-manifest.json" />
     <None Remove="Schema\schema-0000.script" />
     <None Remove="Schema\schema-0001.script" />
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Include="Resources\cluster-manifest.json" />
     <EmbeddedResource Include="Schema\schema-0001.script">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
@@ -51,5 +53,27 @@
     <ProjectReference Include="..\..\Lib\Neon.Postgres\Neon.Postgres.csproj" />
     <ProjectReference Include="..\..\Lib\Neon.Service\Neon.Service.csproj" />
   </ItemGroup>
+  
+  <!--
+  The [ClusterManifest] build target executes a [neon-build download-const-uri] command to
+  download the cluster manifest JSON file for the current cluster version.  The manifest
+  will be generated during image builds in neonCLOUD and uploaded to S3.
+  
+  The [neon-build download-const-uri] obtains the URI for the manifest from:
+  
+      assembly:   Neon.Kube.dll (netstandard2.1)
+      constant:   Neon.Kube.NeonDownloads.NeonClusterManifestUri
+  
+  We'll be loading the [Neon.Kube.dll] assembly from that project's folder using the same
+  build configuration and target runtime as this project.  This is a bit fragile.
+  
+  Note that the [neon-build download-const-uri] doesn't fail if it couldn't download the
+  file so that developers will be able to work offline.  We'll just build with the existing
+  manifest file which is checked into git and won't change very often.
+  -->
+
+  <Target Name="ClusterManifest" BeforeTargets="CoreCompile">
+    <Exec Command="neon-build download-const-uri &quot;%NF_ROOT%\Lib\Neon.Kube\bin\$(Configuration)\netstandard2.1\Neon.Kube.dll&quot; Neon.Kube.KubeDownloads NeonClusterManifestUri &quot;$(ProjectDir)Resources\cluster-manifest.json" />
+  </Target>
 
 </Project>
