Replaced "$(SolutionDir)" with "$(NF_ROOT)\" in CSPROJ files because $(SolutionDir) is not available when building and testing outside of Visual Studio.

--- a/Go/GoBuilder/GoBuilder.csproj
+++ b/Go/GoBuilder/GoBuilder.csproj
@@ -30,7 +30,7 @@
   </PropertyGroup>
 
   <Target Name="GoBuild" AfterTargets="BeforeCompile">
-    <Exec Command="pwsh -file &quot;$(SolutionDir)Go\build-all.ps1&quot; -buildConfig $(Configuration)" />
+    <Exec Command="pwsh -file &quot;$(NF_ROOT)\Go\build-all.ps1&quot; -buildConfig $(Configuration)" />
   </Target>
 
 </Project>
