--- a/Lib/Neon.Kube/Resources/Helm/minio/values.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/minio/values.yaml
@@ -154,7 +154,9 @@ tenants:
     ## services created by the operator.
     serviceMetadata: {}
     ## Add environment variables to be set in MinIO container (https://github.com/minio/minio/tree/master/docs/config)
-    env: {}
+    env:
+      - name: MINIO_PROMETHEUS_AUTH_TYPE
+        value: public
     ## PriorityClassName indicates the Pod priority and hence importance of a Pod relative to other Pods.
     ## This is applied to MinIO pods only.
     ## Refer Kubernetes documentation for details https://kubernetes.io/docs/concepts/configuration/pod-priority-preemption/#priorityclass/
