set cluster label for grafana agent

--- a/Lib/Neon.Kube/Resources/Helm/grafana-agent/templates/grafanaagent.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/grafana-agent/templates/grafanaagent.yaml
@@ -16,7 +16,9 @@ spec:
   nodeSelector:
   {{- toYaml .Values.nodeSelector | nindent 4 }}
   prometheus:
-    prometheusExternalLabelName: {{ .Values.clusterName }}
+    prometheusExternalLabelName: ""
+    externalLabels:
+      cluster: {{ .Values.clusterName }}
     shards: {{ .Values.shards }}
     instanceSelector:
       matchLabels:
