--- a/Lib/Neon.Xunit.Couchbase/Neon.Xunit.Couchbase.csproj
+++ b/Lib/Neon.Xunit.Couchbase/Neon.Xunit.Couchbase.csproj
@@ -23,7 +23,7 @@
     <PackageIcon>nuget-icon.png</PackageIcon>
     <PackageTags>xunit couchbase</PackageTags>
     <Copyright>Copyright © 2005-2021 by neonFORGE LLC.  All rights reserved.</Copyright>
-    <GenerateAssemblyInfo>true</GenerateAssemblyInfo>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <GenerateTargetFrameworkAttribute>true</GenerateTargetFrameworkAttribute>
   </PropertyGroup>
 
