--- a/Lib/Neon.Identity/Neon.Identity.csproj
+++ b/Lib/Neon.Identity/Neon.Identity.csproj
@@ -20,7 +20,7 @@
     <AssemblyVersion>0.0.0.0</AssemblyVersion>
     <Configurations>Debug;Release;CodeDoc</Configurations>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
-    <GenerateAssemblyInfo>true</GenerateAssemblyInfo>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <GenerateTargetFrameworkAttribute>true</GenerateTargetFrameworkAttribute>
   </PropertyGroup>
 
