--- a/Test/Test.Neon.Couchbase/Test.Neon.Couchbase.csproj
+++ b/Test/Test.Neon.Couchbase/Test.Neon.Couchbase.csproj
@@ -6,7 +6,7 @@
     <LangVersion>latest</LangVersion>
     <RootNamespace>TestCouchbase</RootNamespace>
     <Configurations>Debug;Release;CodeDoc</Configurations>
-    <GenerateAssemblyInfo>true</GenerateAssemblyInfo>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <GenerateTargetFrameworkAttribute>true</GenerateTargetFrameworkAttribute>
   </PropertyGroup>
 
