--- a/Test/Test.Neon.Deployment/Test.Neon.Deployment.csproj
+++ b/Test/Test.Neon.Deployment/Test.Neon.Deployment.csproj
@@ -9,7 +9,7 @@
     <AssemblyName>Test.Neon.Deployment</AssemblyName>
     <IsPackable>false</IsPackable>
     <Configurations>Debug;Release;CodeDoc</Configurations>
-    <GenerateAssemblyInfo>true</GenerateAssemblyInfo>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <GenerateTargetFrameworkAttribute>true</GenerateTargetFrameworkAttribute>
   </PropertyGroup>
 
