--- a/Lib/Neon.Kube/Resources/Helm/grafana-agent/templates/daemonset.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/grafana-agent/templates/daemonset.yaml
@@ -41,6 +41,9 @@ spec:
         image: "{{ .Values.agent.image.organization }}/{{ .Values.agent.image.repository }}:{{ .Values.agent.image.tag }}"
         imagePullPolicy: IfNotPresent
         name: agent
+        hostPID: true
+        hostNetwork: true
+        dnsPolicy: ClusterFirstWithHostNet
         ports:
         - containerPort: 80
           name: http-metrics
@@ -66,6 +69,8 @@ spec:
           name: opencensus
           protocol: TCP
         securityContext:
+          capabilities:
+            add: ["SYS_TIME"]
           privileged: true
           runAsUser: 0
         volumeMounts:
@@ -78,6 +83,15 @@ spec:
           readOnly: true
         - mountPath: /etc/machine-id
           name: etcmachineid
+          readOnly: true
+        - name: rootfs
+          mountPath: /host/root
+          readOnly: true
+        - name: sysfs
+          mountPath: /host/sys
+          readOnly: true
+        - name: procfs
+          mountPath: /host/proc
           readOnly: true
         {{- if .Values.resources.agentNode }}
         resources:
@@ -100,5 +114,14 @@ spec:
       - hostPath:
           path: /etc/machine-id
         name: etcmachineid
+      - name: rootfs
+        hostPath:
+          path: /
+      - name: sysfs
+        hostPath:
+          path: /sys
+      - name: procfs
+        hostPath:
+          path: /proc
   updateStrategy:
     type: RollingUpdate
