--- a/Lib/Neon.Kube/Resources/Helm/neon-cluster-operator/values.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/neon-cluster-operator/values.yaml
@@ -32,7 +32,8 @@ resources: {}
   #  cpu: 100m
   #  memory: 128Mi
 
-nodeSelector: {}
+nodeSelector:
+  neonkube.io/neon-system: 'true'
 
 tolerations: []
 
