--- a/Lib/Neon.Kube/Neon.Kube.csproj
+++ b/Lib/Neon.Kube/Neon.Kube.csproj
@@ -570,6 +570,13 @@
     <None Remove="Resources\Helm\neon-acme\Chart.yaml" />
     <None Remove="Resources\Helm\neon-acme\templates\api-service.yaml" />
     <None Remove="Resources\Helm\neon-acme\values.yaml" />
+    <None Remove="Resources\Helm\neon-kubekv-service\.helmignore" />
+    <None Remove="Resources\Helm\neon-kubekv-service\Chart.yaml" />
+    <None Remove="Resources\Helm\neon-kubekv-service\templates\authorizationpolicy.yaml" />
+    <None Remove="Resources\Helm\neon-kubekv-service\templates\deployment.yaml" />
+    <None Remove="Resources\Helm\neon-kubekv-service\templates\serviceaccount.yaml" />
+    <None Remove="Resources\Helm\neon-kubekv-service\templates\_helpers.tpl" />
+    <None Remove="Resources\Helm\neon-kubekv-service\values.yaml" />
     <None Remove="Resources\Helm\neon-cluster-operator\.helmignore" />
     <None Remove="Resources\Helm\neon-cluster-operator\Chart.yaml" />
     <None Remove="Resources\Helm\neon-cluster-operator\templates\_helpers.tpl" />
@@ -1166,6 +1173,13 @@
     <EmbeddedResource Include="Resources\Helm\minio\templates\_helpers.tpl" />
     <EmbeddedResource Include="Resources\Helm\minio\values.yaml" />
     <EmbeddedResource Include="Resources\Helm\neon-acme\values.yaml" />
+    <EmbeddedResource Include="Resources\Helm\neon-kubekv-service\.helmignore" />
+    <EmbeddedResource Include="Resources\Helm\neon-kubekv-service\Chart.yaml" />
+    <EmbeddedResource Include="Resources\Helm\neon-kubekv-service\templates\deployment.yaml" />
+    <EmbeddedResource Include="Resources\Helm\neon-kubekv-service\templates\authorizationpolicy.yaml" />
+    <EmbeddedResource Include="Resources\Helm\neon-kubekv-service\templates\serviceaccount.yaml" />
+    <EmbeddedResource Include="Resources\Helm\neon-kubekv-service\templates\_helpers.tpl" />
+    <EmbeddedResource Include="Resources\Helm\neon-kubekv-service\values.yaml" />
     <EmbeddedResource Include="Resources\Helm\neon-cluster-operator\.helmignore" />
     <EmbeddedResource Include="Resources\Helm\neon-cluster-operator\Chart.yaml" />
     <EmbeddedResource Include="Resources\Helm\neon-cluster-operator\values.yaml" />
