--- a/Lib/Neon.Cadence/Neon.Cadence.csproj
+++ b/Lib/Neon.Cadence/Neon.Cadence.csproj
@@ -106,6 +106,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Go\GoBuilder\GoBuilder.csproj" />
     <ProjectReference Include="..\Neon.Common\Neon.Common.csproj" />
   </ItemGroup>
   
